<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.home.mainmenu.MainFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/image_bg_top"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scaleType="fitXY"
            android:src="@drawable/gradient"
            app:layout_constraintBottom_toBottomOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.2" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/image_profile"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginBottom="-50dp"
            android:src="@mipmap/ic_launcher"
            app:civ_border_color="@color/white"
            app:civ_border_width="2dp"
            app:layout_constraintBottom_toBottomOf="@+id/guideline"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/text_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/inter_bold"
            android:textColor="@color/gray"
            android:textSize="24sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_profile"
            android:text="Nama" />

        <TextView
            android:id="@+id/text_role"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/inter"
            android:textColor="@color/gray"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_name"
            android:text="Role : {...}" />

        <TextView
            android:id="@+id/text_nik"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/inter"
            android:textColor="@color/light_gray"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_role"
            android:text="NIK : MD00001" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_kunjungan"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_nik">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp">

                <TextView
                    android:id="@+id/text_kunjungan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/inter"
                    android:textColor="@color/gray"
                    android:textSize="14sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:text="Kunjungan pada bulan Agustus 2020" />

                <ImageView
                    android:id="@+id/img_score"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="24dp"
                    android:src="@drawable/ic_total_store"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_kunjungan" />

                <TextView
                    android:id="@+id/text_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:fontFamily="@font/inter"
                    android:textColor="@color/gray"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toBottomOf="@+id/img_score"
                    app:layout_constraintLeft_toRightOf="@+id/img_score"
                    app:layout_constraintTop_toTopOf="@+id/img_score"
                    android:text="150" />

                <TextView
                    android:id="@+id/text_desc_score"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/inter"
                    android:text="@string/score"
                    android:textColor="@color/light_gray"
                    android:textSize="12sp"
                    app:layout_constraintLeft_toRightOf="@+id/img_score"
                    app:layout_constraintRight_toRightOf="@+id/text_score"
                    app:layout_constraintTop_toBottomOf="@+id/img_score" />

                <ImageView
                    android:id="@+id/img_actual_score"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="24dp"
                    android:src="@drawable/ic_baseline_check_circle_24"
                    app:layout_constraintLeft_toRightOf="@+id/text_score"
                    app:layout_constraintTop_toBottomOf="@+id/text_kunjungan" />

                <TextView
                    android:id="@+id/text_actual_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:fontFamily="@font/inter"
                    android:textColor="@color/gray"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toBottomOf="@+id/img_actual_score"
                    app:layout_constraintLeft_toRightOf="@+id/img_actual_score"
                    app:layout_constraintTop_toTopOf="@+id/img_actual_score"
                    android:text="150" />

                <TextView
                    android:id="@+id/text_desc_actual_score"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/inter"
                    android:text="@string/actual_score"
                    android:textColor="@color/light_gray"
                    android:textSize="12sp"
                    app:layout_constraintLeft_toRightOf="@+id/img_actual_score"
                    app:layout_constraintRight_toRightOf="@+id/text_actual_score"
                    app:layout_constraintTop_toBottomOf="@+id/img_actual_score" />

                <ImageView
                    android:id="@+id/img_percentage"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="24dp"
                    android:src="@drawable/ic_percentage"
                    app:layout_constraintLeft_toRightOf="@+id/text_actual_score"
                    app:layout_constraintTop_toBottomOf="@+id/text_kunjungan" />

                <TextView
                    android:id="@+id/text_percentage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:fontFamily="@font/inter"
                    android:textColor="@color/gray"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toBottomOf="@+id/img_percentage"
                    app:layout_constraintLeft_toRightOf="@+id/img_percentage"
                    app:layout_constraintTop_toTopOf="@+id/img_percentage"
                    android:text="50%" />

                <TextView
                    android:id="@+id/text_desc_percentage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/inter"
                    android:text="@string/percentage"
                    android:textColor="@color/light_gray"
                    android:textSize="12sp"
                    app:layout_constraintLeft_toLeftOf="@+id/img_percentage"
                    app:layout_constraintRight_toRightOf="@+id/text_percentage"
                    app:layout_constraintTop_toBottomOf="@+id/img_percentage" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_menu"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_kunjungan">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                >

                <TextView
                    android:id="@+id/text_menu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:fontFamily="@font/inter_bold"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:text="@string/menu" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_menu"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginLeft="16dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_menu"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>