<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.home.storemenu.StoreMenuFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar_with_icon_right" />

        <View
            android:id="@+id/view1"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/gray"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <TextView
            android:id="@+id/text_marquee_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="5dp"
            android:ellipsize="marquee"
            android:focusable="true"
            android:fontFamily="@font/inter_bold"
            android:marqueeRepeatLimit="marquee_forever"
            android:singleLine="true"
            android:text="@string/marquee_text"
            android:textColor="@color/blue"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="@color/gray"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_marquee_info" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cons_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/bg_rounded_blue"
            android:padding="10dp"
            app:layout_constraintTop_toBottomOf="@+id/view">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/image_toko"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@mipmap/ic_launcher"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent" />

            <TextView
                android:id="@+id/text_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:fontFamily="serif"
                android:textColor="@color/light_gray"
                android:textSize="12sp"
                app:layout_constraintLeft_toRightOf="@+id/image_toko"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="ST0123" />

            <TextView
                android:id="@+id/text_store_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:fontFamily="@font/inter"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintLeft_toRightOf="@+id/image_toko"
                app:layout_constraintTop_toBottomOf="@+id/text_id"
                tools:text="Indomaret Komsen" />

            <TextView
                android:id="@+id/text_store_cluster"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:fontFamily="@font/inter"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintLeft_toRightOf="@+id/image_toko"
                app:layout_constraintTop_toBottomOf="@+id/text_store_name"
                tools:text="Cluster" />

            <TextView
                android:id="@+id/text_store_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:fontFamily="@font/inter"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintLeft_toRightOf="@+id/image_toko"
                app:layout_constraintTop_toBottomOf="@+id/text_store_cluster"
                tools:text="TT Reguler" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cons_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/cons_profile">

            <TextView
                android:id="@+id/text_menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/inter_bold"
                android:text="@string/menu"
                android:textColor="@color/yellow"
                android:textSize="12sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="16dp"
                app:layout_constraintTop_toBottomOf="@+id/text_menu" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cons_dashboard"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="24dp"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cons_menu">

            <TextView
                android:id="@+id/text_dashboard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/inter_bold"
                android:text="Dashboard Store"
                android:textColor="@color/yellow"
                android:textSize="12sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/img_set_location"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_marginRight="5dp"
                android:src="@drawable/ic_cancel"
                app:layout_constraintRight_toLeftOf="@+id/text_status_store"
                app:layout_constraintTop_toTopOf="@+id/text_status_store" />

            <TextView
                android:id="@+id/text_status_store"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginRight="16dp"
                android:fontFamily="@font/inter_bold"
                android:text="Dashboard Store"
                android:textColor="@color/light_gray"
                android:textSize="12sp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_store"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@+id/btn_visit"
                app:layout_constraintTop_toBottomOf="@+id/text_dashboard" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_visit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="12dp"
                android:text="@string/cb_visit"
                android:textAllCaps="false"
                app:backgroundTint="@color/blue"
                app:iconGravity="textStart"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>